[package]
name = "thingspace-sdk"
version = "0.1.0"
edition = "2024"
authors = ["Justin's Engineering Services, LLC"]

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["--enable-bulk-memory"]

[dependencies]
base64ct = "1.7.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
const_format = "0.2"
iso8601 = { version = "0.6.2", features = ["serde"] }
strum = { version = "0.27", features = ["derive"] }

# "ureq" feature deps
ureq = { version = "3.0", features = ["rustls", "gzip", "json"], optional = true }
toml = { version = "0.8", optional = true }

# "wasm" feature deps
serde_urlencoded = { version = "0.7", optional = true }
serde-wasm-bindgen = { version = "0.4", optional = true }
wasm-bindgen = { version = "0.2.100", optional = true }
wasm-bindgen-futures = { version = "0.4.50", optional = true }
web-sys = { version = "0.3.77", features = ["console", "Headers", "Request", "RequestInit", "RequestMode", "Response", "Window", "RequestCredentials"], optional = true }

# "worker" feature deps
console_error_panic_hook = { version = "0.1.7", optional = true }
worker = { version = "0.6", features = ['http'], optional = true }

[lints.clippy]
pedantic = { priority = -1, level = "warn" }

[features]
# default = ["wasm"]
default = ["worker"]
# default = ["ureq"]
ureq = ["dep:ureq", "dep:toml"]
wasm = ["dep:serde_urlencoded", "dep:serde-wasm-bindgen", "dep:wasm-bindgen", "dep:wasm-bindgen-futures", "dep:web-sys"]
worker = ["dep:console_error_panic_hook", "dep:serde_urlencoded", "dep:serde-wasm-bindgen", "dep:wasm-bindgen", "dep:web-sys", "dep:worker"]
