[package]
name = "web-client"
version = "0.1.0"
authors = ["justin <code@jes.contact>"]
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["--enable-bulk-memory"]

[dependencies]
thingspace-sdk = { path = "../../", default-features = false, features = [
  "worker",
] }
dioxus = { version = "0.6.0" }
serde_json = "1"
web-sys = { version = "0.3.77", features = [
  "Headers",
  "HtmlDocument",
  "Location",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Window",
  "RequestCredentials",
] }
js-sys = { version = "0.3.77" }

# Dependencies for `api` feature
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_urlencoded = { version = "0.7" }

# "wasm" feature deps
wasm-bindgen = { version = "0.2.100" }
wasm-bindgen-futures = { version = "0.4.50" }
serde-wasm-bindgen = "0.4"

[features]
default = ["web"]
web = ["dioxus/web"]
server = ["dioxus/server"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
