[package]
name = "wasm-serv"
version = "0.1.0"
authors = ["justin <code@jes.contact>"]
edition = "2024"

[package.metadata.release]
release = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["--enable-bulk-memory"]

[lib]
crate-type = ["cdylib"]

[dependencies]
thingspace-sdk = { path = "../../", default-features = false, features = [
  "worker",
] }
serde = { version = "1", features = ["derive"] }
serde_urlencoded = { version = "0.7" }
web-sys = { version = "0.3", features = ["Location", "Window"] }
console_error_panic_hook = { version = "0.1.7" }
serde_json = "1"
worker = { version = "0.6", features = ['http'] }

const_format = "0.2"
base64ct = "1.7"
serde-wasm-bindgen = { version = "0.4" }

[profile]

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
