[package]
name = "web-client"
version = "0.1.0"
authors = ["justin <code@jes.contact>"]
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["--enable-bulk-memory"]

[dependencies]
thingspace-sdk = { path = "../../../", default-features = false, features = [
  "worker",
] }
web-sys = { version = "0.3", features = [
  "EventTarget",
  "Headers",
  "HtmlDocument",
  "Location",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Window",
  "RequestCredentials",
] }
dioxus = { version = "0.7", features = ["router"] }
serde_json = "1"
js-sys = { version = "0.3" }
strum = "0.28"

# Dependencies for `api`
# reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_urlencoded = { version = "0.7" }

# "wasm" feature deps
wasm-bindgen = { version = "0.2" }
wasm-bindgen-futures = { version = "0.4" }
serde-wasm-bindgen = "0.6"
futures = { version = "0.3", default-features = false }
futures-util = { version = "0.3", default-features = false }
gloo-net = { version = "0.6", features = ["websocket"] }
bytes = { version = "1" }
thiserror = "2.0"
anyhow = "1.0"

[features]
default = ["web"]
web = ["dioxus/web"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
